[tool.poetry]
name = "PACKAGE_NAME"
authors = ["AUTHOR"]
description = ""
include = ["CHANGELOG.md"]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.8.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
pytest-mock = ">=3.14"

[tool.poetry.scripts]
PACKAGE_NAME = "PACKAGE_NAME.main:main"

[tool.poetry.urls]
changelog = "https://github.com/NTFSvolume/PACKAGE_NAME/blob/master/CHANGELOG.md"

[tool.pytest.ini_options]
addopts = "--cov --cov-report=html"
asyncio_default_fixture_loop_scope = "module"
asyncio_mode = "auto"
minversion = "8.3"
testpaths = ["tests"]

[tool.ruff]
exclude = ["PACKAGE_NAME/dependencies"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "COM8",  # flake8-commas linter
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # PEP8 naming conventions
    "Q",  # flake8-quotes
    "RUF",  # RUF specific fixes
    "TCH",  # flake8-type-checking
    "UP",  # pyupgrade
    "W"  # pycodestyle warnings
]
ignore = [
    "COM812",  # missing-trailing-comma
    "E501",  # Suppress line-too-long, let formatter decide
    "N806"  # Uppercase variables in functions
]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["E402"]
"__init__.py" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = true
ignore_case = true
in_place = true
sort_first = ["name", "python", "select", "tool"]
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
